# BotCrypto

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: README.md  requirements.txt
api/app/: main.py
app/: __init__.py  alerting.py  backtest.py  binance_backfill.py  binance_futures_ingest.py  binance_futures_types.py  config.py  data_source.py  governance.py  indicator_compute.py  indicator_models.py  indicator_repository.py  indicator_service.py  main.py  market_data.py  market_models.py  metrics_service.py  models.py  sessions.py  signal_alerts.py  signal_engine.py  signal_scoring.py  signal_storage.py  signal_worker.py  timescale_repository.py
app/data/: sample_indicator_data.json  sample_market_data.json  sample_metrics.json
app/static/: dashboard.js  style.css
app/templates/: dashboard.html
db/: README.md  __init__.py  alembic.ini  config.py  models.py  repository.py  session.py
db/migrations/: env.py
db/migrations/versions/: 202310230001_initial_timescale_schema.py
docker/api/: Dockerfile
docker/web/: Dockerfile
docker/worker/: Dockerfile
docs/: backtesting.md  database-schema.md  monitoring.md
infra/: README.md
scripts/: binance_backfill.py  compose_down.sh  compose_up.sh  run_backtest.py
scripts/docker/: init-db.sh  run-migrations.sh  run_worker.py  start-api.sh  start-worker.sh  wait-for-db.sh
shared/python/monorepo_common/: __init__.py  config.py  logging.py
tests/: test_binance_backfill.py  test_binance_futures_api.py  test_binance_futures_ingest.py  test_db_schema.py  test_governance.py  test_indicator_api.py  test_indicator_computations.py  test_metrics_service.py  test_signal_alerts.py  test_signal_api.py  test_signal_engine.py
web/: .eslintrc.json  README.md  next.config.js  package-lock.json  package.json  server.js  tsconfig.json
web/app/: layout.tsx  page.tsx
web/tests/: sample.test.js
worker/: README.md  requirements.txt
worker/app/: main.py
