[project]
name = "ingestion-monitor"
version = "0.1.0"
description = "Monitoring dashboard and API for ingestion and signal health"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.4.0",
    "python-dateutil>=2.8.2",
    "jinja2>=3.1.2",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.29",
    "alembic>=1.13.1",
    "psycopg[binary]>=3.1.8"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "db"]

[tool.setuptools.package-data]
"app" = ["templates/*.html", "static/*", "data/*.json"]
"db" = ["migrations/*.py", "migrations/versions/*.py", "alembic.ini"]

[tool.uvicorn]
app = "app.main:app"
reload = true
port = 8080
host = "0.0.0.0"
