[project]
name = "ingestion-monitor"
version = "0.1.0"
description = "Monitoring dashboard and API for ingestion and signal health"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.4.0",
    "python-dateutil>=2.8.2",
    "jinja2>=3.1.2",
    "httpx>=0.27.0",
    "asyncpg>=0.29.0",
    "websockets>=11.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app"]

[tool.setuptools.package-data]
"app" = ["templates/*.html", "static/*", "data/*.json"]

[tool.uvicorn]
app = "app.main:app"
reload = true
port = 8080
host = "0.0.0.0"

[tool.black]
line-length = 88
target-version = ["py310"]
include = "\.(py|pyi)$"

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["app", "tests"]
known_first_party = ["app"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
